# newstest

./: Dockerfile  README.md  pyproject.toml  ruff.toml  run  scripts.py
data/input/: sample_hitlog.csv
newscorp/: main.py
newscorp/modules/: data_modules.py  data_processor.py  file_handler.py
tests/: helpers.py
tests/modules/: test_data_processor.py  test_file_handler.py
