[tool.poetry]
name = "newscorp"
version = "0.1.0"
description = ""
authors = ["Albert Kolozsvari <albertartk@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
